--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-import": "^2.22.1",
-    "prettier": "^2.1.2"
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.1.2",
+    "remove": "^0.1.5"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "axios-middleware": "^0.3.1",
     "bottleneck": "^2.19.5",
     "currency-formatter": "^1.5.6",
-    "number-to-words": "^1.2.4"
+    "number-to-words": "^1.2.4",
+    "webhook-discord": "^3.7.7"
   }
 }
