--- a/package.json
+++ b/package.json
@@ -6,26 +6,29 @@
   "homepage": "https://github.com/duncanlettuce/depop-refresher",
   "main": "src/index.js",
   "scripts": {
+    "build": "npx rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Donald Geddes <hi@donaldgeddes.ca>",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-import": "^2.22.1",
-    "node-fetch": "^2.6.1",
-    "prettier": "^2.1.2",
-    "remove": "^0.1.5"
+    "prettier": "^2.1.2"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "axios-middleware": "^0.3.1",
+    "axios": "^0.21.1",
     "bottleneck": "^2.19.5",
     "currency-formatter": "^1.5.6",
+    "dotenv": "^8.2.0",
+    "node-cron": "^2.0.3",
     "number-to-words": "^1.2.4",
-    "webhook-discord": "^3.7.7"
+    "rollup": "^2.35.1"
   }
 }
